# datagent

./: .env.format  .gitignore  README.md  pyproject.toml  requirements.txt
app/backend/: main.py
app/backend/routers/: workflow.py
app/frontend/: README.md  package-lock.json  package.json
app/frontend/src/: App.css  App.jsx
deployments/k8s/: inference-deployment.yaml  ingress.yaml  ray-cluster.yaml  trainer-job.yaml
module/datagent/: __init__.py  bootstrap.py  cli.py  config.py  constants.py  settings.py
module/datagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
module/datagent/agents/: __init__.py  base.py  memory.py  registry.py  schemas.py
module/datagent/artifacts/: artifact_store.py  model_registry.py  versioning.py
module/datagent/core/: __init__.py  context.py  dependency_injection.py  event_bus.py  graph_compiler.py  middleware.py  schemas.py  serialization.py  state_manager.py  storage.py  workflow_executor.py  yaml_workflow_loader.py
module/datagent/db/: __init__.py  base.py  fs.py  registry.py
module/datagent/experiments/: tracker.py
module/datagent/llms/: __init__.py  base.py  registry.py  router.py
module/datagent/rag/: __init__.py  embedder.py  openai_embedder.py  pipeline.py  reranker.py  retriever.py
module/datagent/runtimes/: base.py
test/: console_app.py  test_agents.py  test_db_storage.py  test_llm.py  test_rag.py  test_workflow.py
workflows/: distributed_training.yaml  example_workflow.yaml  inference_workflow.yaml  test_workflow.yaml  training_workflow.yaml  workflow.yaml
(+65 files in other folders)
